--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button:hover {
     margin: 1%;
 }
 
-.startBtn {
+.startBtn, .submitBtn {
     font-size: 80%;
     font-weight: bold;
     padding: 5px;
@@ -34,4 +34,8 @@ button:hover {
 
 .hide {
     display: none;
+}
+
+.choices button{
+  display: block;
 }
